--- a/src/pages/register/Register.css
+++ b/src/pages/register/Register.css
@@ -3,4 +3,11 @@
 }
 .page-title {
   margin-bottom: 2rem;
+  font-family: Inter;
+font-size: 33.18px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+letter-spacing: 0.166px;
+
 }
