--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -5,6 +5,7 @@
   padding: 14px 8px;
   justify-content: center;
   align-items: center;
+  gap: 8px;
   border-radius: 4px;
   background: #0267ff;
   color: white;
