--- a/src/pages/register/Register.css
+++ b/src/pages/register/Register.css
@@ -1,13 +1,17 @@
 .register-container {
   margin-top: 6rem;
+  width: 256px;
+
+
 }
 .page-title {
   margin-bottom: 2rem;
   font-family: Inter;
 font-size: 33.18px;
-font-style: normal;
+font-style: oblique;
 font-weight: 700;
-line-height: normal;
-letter-spacing: 0.166px;
+line-height: 40.16px;
+letter-spacing: 0.5%;
+text-shadow: 2px;
 
 }
